added TAGS to config section

--- a/autoSYNC.cfg
+++ b/autoSYNC.cfg
@@ -12,6 +12,11 @@ RADIUS_SECRET = meraki123!
 # Only monitor these orgs, to keep the "crawl" down
 Orgs = 1234, 4566, 1232242, 813583553
 
+[TAG]
+#TARGET should be on ALL networks that are inscope, the master and all the target networks
+TARGET = autoSYNC
+#MASTER should ONLY be on the 'golden network'
+MASTER = golden
 
 [ChangeLog]
 #Leaving this as empty will allow "all changes" to be detected in target networks and will be reverted. adding emails will only revert changes by those users. Once a change is detected, ALL changes will be reverted, not just for that user.
